--- a/css/about.css
+++ b/css/about.css
@@ -51,7 +51,7 @@
     min-height: 622px;
     align-items: flex-end;
     margin-right: 30px;
-    background-image: url('../img/about-img.jpg');
+    background-image: url('../img/about-img.webp');
     background-repeat: no-repeat;
     background-color: transparent;
     background-size: cover;
